--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "agricultural-marketplace-frontend",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@stripe/react-stripe-js": "^2.1.1",
-    "@stripe/stripe-js": "^1.54.1",
-    "axios": "^1.4.0",
-    "formik": "^2.4.2",
-    "framer-motion": "^10.12.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "react-paginate": "^8.2.0",
-    "react-query": "^3.39.3",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2",
-    "recharts": "^2.12.7",
-    "yup": "^1.2.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "dev:backend": "cd backend && set PORT=5000&& npm run dev",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "seed": "cd backend && npm run seed"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^9.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "vite": "^5.0.0"
-  }
+    "name":  "agricultural-marketplace-frontend",
+    "version":  "1.0.0",
+    "private":  true,
+    "dependencies":  {
+                         "@reduxjs/toolkit":  "^1.9.5",
+                         "@stripe/react-stripe-js":  "^2.1.1",
+                         "@stripe/stripe-js":  "^1.54.1",
+                         "axios":  "^1.4.0",
+                         "formik":  "^2.4.2",
+                         "framer-motion":  "^10.12.18",
+                         "react":  "^18.2.0",
+                         "react-dom":  "^18.2.0",
+                         "react-helmet-async":  "^1.3.0",
+                         "react-hot-toast":  "^2.4.1",
+                         "react-icons":  "^4.10.1",
+                         "react-paginate":  "^8.2.0",
+                         "react-query":  "^3.39.3",
+                         "react-redux":  "^8.1.1",
+                         "react-router-dom":  "^6.14.2",
+                         "recharts":  "^2.12.7",
+                         "yup":  "^1.2.0"
+                     },
+    "scripts":  {
+                    "dev":  "vite",
+                    "dev:backend":  "cd backend \u0026\u0026 set PORT=5000\u0026\u0026 npm run dev",
+                    "dev:all":  "concurrently \"npm run dev\" \"npm run dev:backend\"",
+                    "build":  "./build.sh",
+                    "preview":  "vite preview",
+                    "lint":  "eslint .",
+                    "seed":  "cd backend \u0026\u0026 npm run seed",
+                    "install:backend":  "cd backend \u0026\u0026 npm install"
+                },
+    "devDependencies":  {
+                            "@types/react":  "^18.2.0",
+                            "@types/react-dom":  "^18.2.0",
+                            "@vitejs/plugin-react":  "^4.2.0",
+                            "autoprefixer":  "^10.4.14",
+                            "concurrently":  "^9.2.1",
+                            "eslint":  "^8.57.0",
+                            "eslint-plugin-react":  "^7.34.0",
+                            "eslint-plugin-react-hooks":  "^4.6.0",
+                            "eslint-plugin-react-refresh":  "^0.4.5",
+                            "postcss":  "^8.4.24",
+                            "tailwindcss":  "^3.3.2",
+                            "vite":  "^5.0.0"
+                        }
 }
