--- a/backend/Package.json
+++ b/backend/Package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node seed.js",
+    "create-admin": "node create-admin.js",
     "test": "jest"
   },
   "dependencies": {
