--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "recharts":  "^2.12.7",
         "yup":  "^1.2.0"
     },
-    "scripts":  {
+"scripts":  {
         "dev":  "vite",
         "dev:backend":  "cd backend && set PORT=5000&& npm run dev",
         "dev:all":  "concurrently \"npm run dev\" \"npm run dev:backend\"",
@@ -29,7 +29,10 @@
         "preview":  "vite preview",
         "lint":  "eslint .",
         "seed":  "cd backend && npm run seed",
-        "install:backend":  "cd backend && npm install"
+        "install:backend":  "cd backend && npm install",
+        "install:all":  "npm install && cd backend && npm install",
+        "postinstall":  "cd backend && npm install",
+        "start":  "cd backend && node server.js"
     },
     "devDependencies":  {
         "@types/react":  "^18.2.0",
