--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "dev":  "vite",
         "dev:backend":  "cd backend && set PORT=5000&& npm run dev",
         "dev:all":  "concurrently \"npm run dev\" \"npm run dev:backend\"",
-        "build":  "bash build.sh",
+"build":  "npx vite build",
         "preview":  "vite preview",
         "lint":  "eslint .",
         "seed":  "cd backend && npm run seed",
